no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -10,6 +10,9 @@ VERSION ==>                       #See Go language
 DOCUMENTED ELSEWHERE ==>          #In go testing:
                                   #  - go test
                                   #  - go tool cover
+                                  #In go debugging:
+                                  #  - go test profiling CLI flags
+                                  #  - go tool pprof
 
 
                                              /=+===============================+=\
