--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -14,7 +14,9 @@ DOCUMENTED ELSEWHERE ==>          #In go language (because part of language spec
                                   #  - runtime.GOOS|GOARCH|Compiler
                                   #In go testing:
                                   #  - testing
-                                  #  - runtime.[Read]MemStats|GC
+                                  #In go debugging:
+                                  #  - runtime/pprof
+                                  #  - runtime.[Read]MemStats|GC|*Profile*
 
 
                                              /=+===============================+=\
