no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -24,8 +24,6 @@ DOCUMENTED ELSEWHERE ==>          #In go testing:
 
 ENVVAR GOFLAGS                    #"-FLAG=VAL ..." applied to every go ..., providing the command has that flag
 
-go version                        #Prints "go version goX.Y.Z GOOS/GOARCH"
-
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -75,6 +73,7 @@ ENVVAR GOROOT                     #Global go directory.
                                   #Directory structure is non-module-aware one.
                                   #Default: /usr/local/go
                                   #Same directory structure as GOPATH
+runtime.GOROOT()->'/PATH'         #Returns ENVVAR GOROOT, or the default value for it
 ENVVAR GOROOT_FINAL               #Allows separating Global go directory sources from built files
 ENVVAR GOPATH                     #Same syntax as PATH (:-separated on Unix, ;-separated on Windows)
                                   #  - on write, only first element is used
@@ -571,32 +570,6 @@ go build -ldflags
  '[IMPORT_PATHS=]ARGS'            #Pass arguments to underlying go tool link ARGS
 go build -toolexec 'PATH [ARGS]'  #Use a different program than go tool asm under the hood
 
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:       BUILD ENVIRONMENT       :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-runtime.GOOS                      #OS name
-                                  #Among "linux", "darwin", "windows", "freebsd|netbsd|openbsd|dragonfly", "solaris|illumos", "plan9",
-                                  #"aix", "android", "nacl" (Chrome OS), "js" (with GOARCH "wasm")
-                                  #Can be set manually with ENVVAR GOOS
-
-runtime.GOARCH                    #CPU architecture
-                                  #Among "386|amd64[p32]", "arm[64]", "ppc64[le]", "mips[64][le]", "s390x", "riscv64", "wasm"
-                                  #Can be set manually with ENVVAR GOARCH
-ENVVAR GOARM                      #"5|6|7". ARM version, with GOARCH=arm
-ENVVAR GO386                      #"387|sse2". Floating point version, with GOARCH=386
-ENVVAR GOMIPS[64]                 #"hardfloat|softfloat". Floating point version, with GOARCH=mips[64][le]
-ENVVAR GOWASM                     #"FEAT,...". Experimental features, with GOARCH=wasm, among "satconv|signext"
-
-ENVVAR GOHOSTOS|GOHOSTARCH        #Like ENVVAR GOOS|GOARCH except readonly
-
-ENVVAR GOEXE                      #Built file file extension. "" on Unix, ".exe" on Windows
-                                  #Read-only
-
 // +build ALL_CONSTRAINTS         #"Build constraint|tag".
                                   #Comment in source code applying to whole file
                                   #  - must be at top of file (except other comments or blank lines)
@@ -657,6 +630,11 @@ ENVVAR GO_EXTLINK_ENABLED         #
 go build
  -buildmode=c-archive|c-shared    #
 go build -gccgoflags STR          #
+
+runtime.NumCgoCall()->INT64       #
+runtime.SetCgoTraceback(...)      #
+
+import "runtime/cgo"              #
 
 
                                              /=+===============================+=\
