--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -15,7 +15,9 @@ VERSION ==>                       #See Go language
                                              \=+===============================+=/
 
 
-runtime.Breakpoint()              #Sets a breakpoint
+runtime.Breakpoint()              #Sets a hardware breakpoint
+                                  #On x64, this will emit a SIGTRAP
+                                  #Must be done withing a debuffer that can handle those signals
 
 
                                              /=+===============================+=\
@@ -98,13 +100,17 @@ runtime.MemProfile(...)
 runtime.MemProfileRecord
 runtime.BlockProfile(...)
 runtime.BlockProfileRecord
-runtime.MutexProfile(...)         #Low-level way to write profiling.
+runtime.MutexProfile(...)
+runtime.GoroutineProfile(...)
+runtime.ThreadCreateProfile(...)
+runtime.StackRecord               #Low-level way to write profiling.
 
 runtime.SetCPUProfileRate(INT)    #Set number of samples per second (def: 100)
                                   #If 0, disables CPU profiling
 runtime.MemProfileRate            #Like -memprofilerate but programmatic
 runtime.SetBlockProfileRate(INT)  #Like -blockprofilerate but programmatic
-runtime.SetMutexProfileRate(INT)  #Like -blockprofilerate but for mutex profiling
+runtime.SetMutexProfileFraction
+ (INT)                            #Like -blockprofilerate but for mutex profiling
 
 
                                              /=+===============================+=\
@@ -287,6 +293,7 @@ testing.AllocsPerRun(INT, FUNC()) #Runs FUNC() INT times, and returns + prints t
 
 runtime.ReadMemStats(*MEM_STATS)  #Returns memory usage statistics since beginning of process
 
+runtime.MemStats                  #
 MEM_STATS.Sys UINT64              #Total memory available
                                   #Sum of HeapSys + StackSys + MSpanSys + MCacheSys + BuckHashSys + GCSys + OtherSys
 
@@ -326,33 +333,6 @@ MEM_STATS.Lookups UINT64          #Number of time a POINTER was deferenced
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:       GARBAGE COLLECTOR       :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-GC ==>                            #Mark-and-sweep.
-                                  #Sweeping happens both incrementally and during stop-the-world events (STW)
-                                  #STW are triggered when HeapInUse reaches a changing specific heap size threshold
-                                  #STW are broken down into several "pauses".
-
-runtime.GC()                      #Force running a GC stop-the-world
-
-MEM_STATS.NextGC UINT64           #Next GC threshold to trigger STW
-MEM_STATS.NumGC UINT32            #Number of GC STWs
-MEM_STATS.NumForcedGC UINT32      #Number of runtime.GC() calls
-MEM_STATS.PauseTotalNs UINT64     #Number of ns spent in all GC STWs
-MEM_STATS.PauseNs [256]UINT_64    #Time spent in each of the last 256 GC pauses. If none, 0.
-MEM_STATS.GCCPUFraction FLOAT64   #How much % of CPU time was spent in GC
-MEM_STATS.LastGC UINT64           #Last GC's Unix timestamp (in ns). If none, 0.
-MEM_STATS.PauseEnd [256]UINT_64   #Unix timestamp (in ns) of the last 256 GC pauses. If none, 0.
-
-MEM_STATS.EnableGC BOOL           #Whether GC is enabled (def: true)
-MEM_STATS.DebugGC BOOL            #Always false
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
                                             )==:            TRACING            :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -360,3 +340,7 @@ MEM_STATS.DebugGC BOOL            #Always false
 
 go test
 -trace=FILE                       #Write tracing file???
+
+runtime.StartTrace()->ERROR|nil   #???
+runtime.StopTrace()               #???
+runtime.ReadTrace()->[]BYTE       #???
