--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,19 +6,16 @@
 
 TODO:
   - commands:
-     - profiling:
-        - https://golang.org/pkg/runtime/pprof
-        - https://blog.golang.org/pprof
-        - https://golang.org/doc/diagnostics.html
+     - https://golang.org/pkg/runtime/debug
      - tracing:
         - https://golang.org/pkg/runtime/trace/
+        - started tracing doc in bottom of debugging doc
+     - profiling:
+        - https://blog.golang.org/pprof
+        - https://golang.org/doc/diagnostics.html
      - go test:
-        - https://golang.org/pkg/runtime/
-        - go tool pprof
         - https://blog.learngoprogramming.com/a-visual-guide-to-golang-memory-allocator-from-ground-up-e132258453ed
-        - https://golang.org/cmd/go/#hdr-Testing_flags
         - https://golang.org/pkg/testing/quick/
-        - break down go_testing file into several
      - https://golang.org/doc/cmd
      - https://golang.org/cmd/
         - after doing go tool asm: move doc of go build -asmflags|toolexec
@@ -41,13 +38,16 @@ TODO:
      - https://pkg.go.dev/
   - https://blog.golang.org
   - https://golang.org/pkg/
-     - after io package, read again https://golang.org/doc/effective_go.html#printing
+     - after io package:
+        - https://golang.org/doc/effective_go.html#printing
+        - https://golang.org/pkg/testing/iotest
      - after time package
         - https://github.com/golang/go/wiki/Timeouts
         - https://github.com/golang/go/wiki/RateLimiting
   - https://github.com/golang?type=source
   - add VSCode shortcuts
   - go through to_learn.txt
+     - including delve and other debuggers
   - https://github.com/golang/go/wiki/CodeTools
   - https://github.com/golang/go/wiki/Projects
   - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
@@ -898,6 +898,8 @@ runtime.Error                     #ERROR_INTERFACE_TYPE
                                   #  - closed CHAN: CHAN <- VAL after close(CHAN)
 RUNTIME_ERROR.RuntimeError()      #
 
+runtime.TypeAssertionError        #RUNTIME_ERROR_TYPE for an invalid type assertion
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -918,12 +920,26 @@ GOROUTINE ==>                     #Like coroutine:
                                   #  - use OS threads under hood, unlike usual coroutines which are fully userland
                                   #  - i.e. benefits from OS scheduling and multi-core parallelism
                                   #Use a threads pool:
-                                  #  - each time goroutine yields (with CHAN<- or <-CHAN), return thread to pool
+                                  #  - each time goroutine yields (with CHAN<-, <-CHAN or runtime.Gosched()), return thread to pool
                                   #  - when continue, inverse
 
-EXIT ==>                          #Process does not wait for thread exit
-                                  #  - but process exit terminates threads
-                                  #  - can used synchronization to wait
+runtime.Gosched()                 #Make current goroutine yield.
+                                  #I.e. allow other goroutines to use CPU before starting again.
+runtime.LockOSThread()            #Ensure goroutine always re-use the same thread
+                                  #Can be done several times, requiring several call to UnlockOSThread() to undo
+                                  #Only useful when using C or Assembly to use thread-specific memory (e.g. errno)
+runtime.UnlockOSThread()          #Inverse
+
+EXIT ==>                          #Process (main goroutine) exit terminates threads
+                                  #  - does not wait for their exit
+                                  #  - can use synchronization to wait
+
+runtime.Goexit()                  #Stops current goroutine. Other goroutines keep running.
+                                  #Does not trigger a panic.
+                                  #  - deferred FUNCs are called, but recover() returns nil
+                                  #If main goroutine:
+                                  #  - wait for all goroutines to exit
+                                  #  - then crash (exit code 1, print stack trace)
 
 SHARED MEMORY ==>                 #All goroutines from same package share package scope.
                                   #Also, if FUNC is closure, still holds reference to uper scopes.
@@ -946,6 +962,8 @@ MAPS ==>                          #MAP[KVAL] = VAL is not atomic.
                                   #I.e. one goroutine might read it while it is being half-written by another one
                                   #  - i.e. not a problem if read-only, or write-only (single writer)
                                   #However sync.map is atomic
+
+runtime.NumGoroutine()->INT       #Number of running goroutines
 
 
                                              /=+===============================+=\
