no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -408,6 +408,27 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:       LIST PROGRAMMATIC       :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+debug.ReadBuildInfo()
+ ->*BUILD_INFO,OK                 #
+debug.BuildInfo                   #Module information, including dependencies
+BUILD_INFO.Path                   #'MODULE_PATH'
+BUILD_INFO.Main                   #MODULE
+BUILD_INFO.Deps                   #[]*MODULE
+
+runtime.Module                    #
+MODULE.Path                       #'MODULE_PATH'
+MODULE.Version                    #'MODULE_VERSION'
+MODULE.Sum                        #STR. Module checksum (go.sum)
+MODULE.Replace                    #*MODULE (go.mod replace)
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:              GET              :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -626,6 +647,7 @@ ENVVAR CGO_CFLAGS|CPPFLAGS|
 ENVVAR PKG_CONFIG                 #
 ENVVAR GCCGOTOOLDIR               #
 ENVVAR GO_EXTLINK_ENABLED         #
+ENVVAR GODEBUG="cgocheck=0|1|2"		#
 
 go build
  -buildmode=c-archive|c-shared    #
