--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -53,7 +53,7 @@ THREAD PROFILING ==>              #Profiles which functions create OS threads
 -outputdir DIR                    #Where to write PROFFILE
 
 -memprofilerate=INT               #INT (in bytes, def: 0.5MB)
-                                  #If 0, disables memory profiling
+ENVVAR GODEBUG="memprofilerate=N" #If 0, disables memory profiling
 -blockprofilerate=INT             #Set to only detect 1/INT goroutines waits in average (def: 1, i.e. all)
                                   #If 0, disables goroutinesBlock profiling
 
@@ -338,9 +338,48 @@ MEM_STATS.Lookups UINT64          #Number of time a POINTER was deferenced
                                              \=+===============================+=/
 
 
-go test
--trace=FILE                       #Write tracing file???
+TRACE_FILE                        #Similar to profiling, but instead:
+                                  #  - records everything instead of sampling
+                                  #  - records over time, i.e. can see as time series graph
+                                  #Records information over time:
+                                  #  - includes:
+                                  #     - number of goroutines|threads running|waiting
+                                  #     - heap memory used
+                                  #     - syscalls
+                                  #     - GC
+                                  #  - can be per CPU ("process")
+                                  #  - ns-precise
+                                  #Also records total waits:
+                                  #  - includes:
+                                  #     - network|mutex|syscall|scheduler waits
+                                  #     - GC sweeps|pauses
+                                  #  - can be per goroutine
+                                  #  - can be as graph showing non-wait time (minimum mutator utilization)
+                                  #Can group into programmatical user-defined:
+                                  #  - tasks: global time region
+                                  #  - regions
 
-runtime.StartTrace()->ERROR|nil   #???
-runtime.StopTrace()               #???
-runtime.ReadTrace()->[]BYTE       #???
+go test -trace=TRACE_FILE         #Write TRACE_FILE
+
+import "runtime[/trace]"
+
+runtime.StartTrace()->ERROR|nil
+runtime.StopTrace()
+runtime.ReadTrace()->[]BYTE       #Same but programmatic
+
+trace.IsEnabled()->BOOL           #
+
+trace.NewTask(CONTEXT, STR)       #Start a user-defined task
+ ->CONTEXT2,TASK                  #CONTEXT2 must be passed to other trace.*(CONTEXT, ...) (which should otherwise use nil)
+                                  #STR is custom name
+                                  #Can be nested
+TASK.End()                        #
+
+go tool trace [BIN] TRACE_FILE    #Visualize trace file in browser
+                                  #  - Chromium is better at visualizing the main dynamic graph
+                                  #BIN: like go tool pprof
+-http=HOST:PORT                   #
+-d                                #Verbose mode
+
+-pprof=TYPE                       #Output in a format to visualize with go tool pprof
+                                  #TYPE can be net|sync|syscall|scheduler for network|mutex|syscall|scheduler waits
