--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,16 +6,14 @@
 
 TODO:
   - commands:
-     - https://golang.org/pkg/runtime/debug
      - tracing:
         - https://golang.org/pkg/runtime/trace/
         - started tracing doc in bottom of debugging doc
      - profiling:
         - https://blog.golang.org/pprof
         - https://golang.org/doc/diagnostics.html
-     - go test:
         - https://blog.learngoprogramming.com/a-visual-guide-to-golang-memory-allocator-from-ground-up-e132258453ed
-        - https://golang.org/pkg/testing/quick/
+     - https://golang.org/pkg/testing/quick/
      - https://golang.org/doc/cmd
      - https://golang.org/cmd/
         - after doing go tool asm: move doc of go build -asmflags|toolexec
@@ -24,7 +22,6 @@ TODO:
      - all go CMD
      - all go* executable
      - https://pkg.go.dev/golang.org/x/tools
-     - ENVVAR GODEBUG (see go doc runtime)
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
@@ -920,26 +917,35 @@ GOROUTINE ==>                     #Like coroutine:
                                   #  - use OS threads under hood, unlike usual coroutines which are fully userland
                                   #  - i.e. benefits from OS scheduling and multi-core parallelism
                                   #Use a threads pool:
-                                  #  - each time goroutine yields (with CHAN<-, <-CHAN or runtime.Gosched()), return thread to pool
+                                  #  - each time goroutine yields, return thread to pool
+                                  #  - yield on:
+                                  #     - CHAN<- or <-CHAN
+                                  #     - runtime.Gosched()
+                                  #     - pre-emptively, i.e. in-between two safe statements, after the goroutine has run for some time
                                   #  - when continue, inverse
 
 runtime.Gosched()                 #Make current goroutine yield.
                                   #I.e. allow other goroutines to use CPU before starting again.
-runtime.LockOSThread()            #Ensure goroutine always re-use the same thread
-                                  #Can be done several times, requiring several call to UnlockOSThread() to undo
-                                  #Only useful when using C or Assembly to use thread-specific memory (e.g. errno)
-runtime.UnlockOSThread()          #Inverse
+ENVVAR GODEBUG="asyncpreemptoff=1"#Disables pre-emptive goroutine yields.
+ENVVAR GODEBUG="schedtrace=UINT"	#Every UINTms, print debug information about thread|goroutine scheduler
+ENVVAR GODEBUG="scheddetail=1"		#Verbose mode with schedtrace=UINT
 
 EXIT ==>                          #Process (main goroutine) exit terminates threads
                                   #  - does not wait for their exit
                                   #  - can use synchronization to wait
-
 runtime.Goexit()                  #Stops current goroutine. Other goroutines keep running.
                                   #Does not trigger a panic.
                                   #  - deferred FUNCs are called, but recover() returns nil
                                   #If main goroutine:
                                   #  - wait for all goroutines to exit
                                   #  - then crash (exit code 1, print stack trace)
+
+runtime.LockOSThread()            #Ensure goroutine always re-use the same thread
+                                  #Can be done several times, requiring several call to UnlockOSThread() to undo
+                                  #Only useful when using C or Assembly to use thread-specific memory (e.g. errno)
+runtime.UnlockOSThread()          #Inverse
+
+runtime.NumGoroutine()->INT       #Number of running goroutines
 
 SHARED MEMORY ==>                 #All goroutines from same package share package scope.
                                   #Also, if FUNC is closure, still holds reference to uper scopes.
@@ -962,8 +968,6 @@ MAPS ==>                          #MAP[KVAL] = VAL is not atomic.
                                   #I.e. one goroutine might read it while it is being half-written by another one
                                   #  - i.e. not a problem if read-only, or write-only (single writer)
                                   #However sync.map is atomic
-
-runtime.NumGoroutine()->INT       #Number of running goroutines
 
 
                                              /=+===============================+=\
